Resolves: tdf#91695 partially Revert "crash on layout of novell622972-2.html"

This reverts commit 9857c6390212e16dd9f26b47b4afc5d33b5242ef.

Change-Id: Id47e982eb346c092991f07964c0146daefccb031