sw/source/core/layout/layact.cxx
@@ -1239,12 +1239,7 @@ bool SwLayAction::FormatLayout( SwLayoutFrm *pLay, bool bAddRect )
             aOldRect = static_cast<SwPageFrm*>(pLay)->GetBoundRect();
         }
 
-        {
-            //JoinLock pParent for the lifetime of the Calc call to avoid
-            //SwSectionFrm::MergeNext removing the pLay we're trying to Format
-            FlowFrmJoinLockGuard aJoinGuard(pLay);
-            pLay->Calc();
-        }
+        pLay->Calc();
 
         if ( aOldFrame != pLay->Frm() )
             bChanged = true;
